Fixes row gap in the containers

--- a/client/my-sites/promote-post-i2/components/campaign-item-details/style.scss
+++ b/client/my-sites/promote-post-i2/components/campaign-item-details/style.scss
@@ -154,7 +154,7 @@ body.is-section-promote-post-i2 .layout__content .campaign-item-details.main {
 		.campaign-item-details__payment-container {
 			border: 1px solid #ddd;
 			border-radius: 4px;
-			margin-bottom: 65px;
+			margin-bottom: 24px;
 
 			@media (max-width: 660px) {
 				border: 0;
